fixed left alignment issue

--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -177,5 +177,5 @@ body.dark ion-textarea {
 .vocab-count {
     background-color: var(--ion-color-primary);
     color: var(--ion-color-white);
-    margin-left: auto;
+    margin-left: -15px;
 }
